--- a/guided_tour.html
+++ b/guided_tour.html
@@ -334,7 +334,7 @@
             },
             {
                 title: 'ניהול חוקרים פעילים 🧑‍🔬',
-                text: 'זהו מסך חשוב מאוד! <b>רק החוקרים שתסמנו כאן יופיעו</b> ברשימת הבחירה בטופס הדיווח. זה חוסך זמן ומבטיח שהרשימה שלכם תמיד רלוונטית.',
+                text: 'זהו מסך חשוב מאוד! <b>רק החוקרים שתסמנו כאן יופיעו</b> ברשימת הבחירה בטופס הדיווח.',
                 selector: '#researchers-list',
                 position: 'top',
                 onBeforeStep: () => navigateTo(".nav-btn[onclick*='active-researchers']"),
