--- a/guided_tour.html
+++ b/guided_tour.html
@@ -347,7 +347,7 @@
             },
             {
                 title: 'סיימנו! 🚀',
-                text: 'אתם מוכנים להתחיל. חסר לכם שלא תדווחו 😉. בהצלחה!',
+                text: 'אתם מוכנים להתחיל. <strong><u>חסר לכם שלא תדווחו 😉</u></strong>. בהצלחה!',
                 onBeforeStep: () => navigateTo(".nav-btn[onclick*='main']"),
             },
         ];
