--- a/guided_tour.html
+++ b/guided_tour.html
@@ -14,30 +14,22 @@
             --tour-shadow-dark: rgba(17, 24, 39, 0.1);
         }
 
-        /* --- Container for all tour elements --- */
         .tour-overlay-container {
             position: fixed;
             inset: 0;
             z-index: 10000;
-            /* Clicks on the container (the shadow area) will be caught to close the tour */
             pointer-events: none;
         }
         .tour-overlay-container.tour-active {
             pointer-events: auto;
         }
 
-        /* * QA FIX: Spotlight Effect using the box-shadow "hole-punch" technique.
-         * The highlight element itself is transparent, but it casts a giant shadow
-         * around itself, creating the overlay effect with a clear "hole".
-        */
         .tour-highlight {
             position: absolute;
             z-index: 10001;
             border-radius: 8px;
-            /* A small, colored shadow for the border, and a giant shadow for the overlay */
             box-shadow: 0 0 0 3px var(--tour-primary-color), 0 0 0 500vmax var(--tour-overlay-color);
             transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1);
-            /* Clicks should pass through the "hole" to the element underneath */
             pointer-events: none;
         }
 
@@ -54,7 +46,7 @@
             transition: opacity 300ms ease, transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
             opacity: 0;
             transform: translateY(10px);
-            pointer-events: auto; /* Tooltip itself is interactive */
+            pointer-events: auto;
         }
 
         .tour-tooltip.visible { opacity: 1; transform: translateY(0); }
@@ -67,8 +59,8 @@
             border: 1px solid #e5e7eb;
             z-index: -1;
         }
-        .tour-tooltip[data-placement^="bottom"] .tour-arrow { top: -8px; border-top-color: var(--tour-bg-color); border-left-color: var(--tour-bg-color); }
-        .tour-tooltip[data-placement^="top"] .tour-arrow { bottom: -8px; border-bottom-color: var(--tour-bg-color); border-right-color: var(--tour-bg-color); }
+        .tour-tooltip[data-placement^="bottom"] .tour-arrow { top: -8px; }
+        .tour-tooltip[data-placement^="top"] .tour-arrow { bottom: -8px; }
         .tour-tooltip h3 { margin: 0 0 10px; font-size: 1.1rem; font-weight: 600; }
         .tour-tooltip p { margin: 0 0 18px; font-size: 0.95rem; line-height: 1.6; color: #374155; }
         .tour-controls { display: flex; justify-content: space-between; align-items: center; }
@@ -87,7 +79,29 @@
         .final-step-modal {
             position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;
         }
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+        /* ---  הסגנון של ההודעה החדשה --- */
+        .custom-toast {
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translate(-50%, -150%);
+            background-color: #222;
+            color: white;
+            padding: 15px 25px;
+            border-radius: 10px;
+            z-index: 10005;
+            font-size: 1.1rem;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            opacity: 0;
+            transition: transform 0.4s ease, opacity 0.4s ease;
+        }
+        .custom-toast.show {
+            transform: translate(-50%, 0);
+            opacity: 1;
+        }
+        /* ------------------------------ */
+
         @media (max-width: 600px) {
             .tour-tooltip { position: fixed !important; bottom: 10px !important; left: 10px !important; right: 10px !important; top: auto !important; width: auto !important; max-width: none !important; transform: none !important; }
             .tour-arrow { display: none !important; }
@@ -183,7 +197,6 @@
         _createDOMElements() {
             const container = document.createElement('div');
             container.className = 'tour-overlay-container';
-            // The mask is no longer needed, highlight creates the effect
             container.innerHTML = `
                 <div class="tour-highlight" style="display:none;"></div>
                 <div class="tour-tooltip" role="dialog" aria-modal="true" tabindex="-1" style="display:none;">
@@ -220,7 +233,6 @@
             el.nextBtn.addEventListener('click', () => this._next());
             el.prevBtn.addEventListener('click', () => this._prev());
             el.closeBtn.addEventListener('click', () => this.end());
-            // QA FIX: Clicking the dark overlay area (the container) closes the tour.
             el.container.addEventListener('click', (e) => {
                 if (e.target === el.container) {
                     this.end();
@@ -262,7 +274,7 @@
             }
 
             tt.dataset.placement = placement;
-            const p = 4; // Smaller padding for a tighter fit
+            const p = 4;
             this._elements.highlight.style.cssText = `
                 display: block; top: ${rect.top - p}px; left: ${rect.left - p}px;
                 width: ${rect.width + 2 * p}px; height: ${rect.height + 2 * p}px;
@@ -301,6 +313,30 @@
             const el = doc.querySelector(selector);
             if (el) el.click();
         };
+
+        // --- פונקציה חדשה להצגת ההודעה ---
+        const showToast = (message) => {
+            // מונע יצירת הודעות כפולות
+            if (doc.querySelector('.custom-toast')) return;
+
+            const toast = doc.createElement('div');
+            toast.className = 'custom-toast';
+            toast.textContent = message;
+            doc.body.appendChild(toast);
+
+            // מפעיל את האנימציה
+            setTimeout(() => {
+                toast.classList.add('show');
+            }, 10);
+
+            // מסיר את ההודעה אחרי 3 שניות
+            setTimeout(() => {
+                toast.classList.remove('show');
+                // מסיר את האלמנט מהדף אחרי שהאנימציה מסתיימת
+                toast.addEventListener('transitionend', () => toast.remove());
+            }, 3000);
+        };
+        // -------------------------------------
 
         const tourSteps = [
             {
@@ -350,6 +386,59 @@
                 text: 'אתם מוכנים להתחיל. <strong><u>חסר לכם שלא תדווחו 😉</u></strong>. בהצלחה!',
                 onBeforeStep: () => navigateTo(".nav-btn[onclick*='main']"),
             },
+            {
+                title: 'התחייבות אישית ✍️',
+                text: `
+                    <div style="text-align:center; margin-top:10px;">
+                        <h3>אני מתחייב לדווח בזמן?</h3>
+                        <div id="btnContainer"
+                             style="display:flex; justify-content:center; gap:20px; margin-top:15px; position:relative; width:350px; height: 120px; margin:auto;">
+
+                            <button id="yesBtn" style="
+                                padding:10px 20px; font-size:18px; border:none; border-radius:8px;
+                                background:#22c55e; color:white; cursor:pointer; position:relative; z-index:2;">
+                                ✅ כן
+                            </button>
+
+                            <button id="noBtn" style="
+                                padding:10px 20px; font-size:18px; border:none; border-radius:8px;
+                                background:#ef4444; color:white; cursor:pointer; position:absolute; left:220px; top:0;
+                                transition: all 0.1s ease-out;">
+                                ❌ לא
+                            </button>
+                        </div>
+                    </div>
+                `,
+                onBeforeStep: () => {
+                    setTimeout(() => {
+                        const noBtn = document.getElementById("noBtn");
+                        const yesBtn = document.getElementById("yesBtn");
+                        const container = document.getElementById("btnContainer");
+
+                        if (noBtn && yesBtn && container) {
+                            noBtn.addEventListener("mouseover", () => {
+                                const maxX = container.clientWidth - noBtn.offsetWidth;
+                                const maxY = container.clientHeight - noBtn.offsetHeight;
+                                const x = Math.random() * maxX;
+                                const y = Math.random() * maxY;
+
+                                noBtn.style.left = `${x}px`;
+                                noBtn.style.top = `${y}px`;
+                            });
+
+                            noBtn.addEventListener("click", () => {
+                                // --- שימוש בפונקציה החדשה במקום alert ---
+                                showToast("הפעולה נכשלה בהצלחה! 😉");
+                            });
+
+                            yesBtn.addEventListener("click", () => {
+                                // --- שימוש בפונקציה החדשה במקום alert ---
+                                showToast("מעולה! לא חשבנו אחרת 😎");
+                            });
+                        }
+                    }, 300);
+                }
+            }
         ];
 
         GuidedTour_QA_Enhanced.init({
